--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ opencv-python==4.7.0.68
 einops==0.6.1
 pytorch-lightning==1.9.0
 # bitsandbytes==0.39.1
-tensorboard==2.10.1
+tensorboard==2.14.1
 safetensors==0.4.2
 # gradio==3.16.2
 altair==4.2.2
@@ -26,7 +26,7 @@ huggingface-hub==0.20.1
 # onnxruntime-gpu==1.16.0
 # onnxruntime==1.16.0
 # this is for onnx: 
-# protobuf==3.20.3
+protobuf==3.20.3
 # open clip for SDXL
 open-clip-torch==2.20.0
 # for kohya_ss library
