--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,9 @@ imagesize==1.4.1
 tensorflow==2.14.1
 # for WD14 captioning (onnx)
 onnx==1.15.0
-# onnxruntime-gpu==1.17.1
-# onnxruntime==1.17.1
-# for cuda 12.1(default 11.8)
+# onnxruntime-gpu==1.18.1
+# onnxruntime==1.18.1
+# for cuda 12.x(default 11.8)
 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/
 onnxruntime-gpu
 omegaconf
