--- a/requirements.txt
+++ b/requirements.txt
@@ -33,11 +33,9 @@ onnx==1.15.0
 # onnxruntime==1.18.1
 # for cuda 12.x(default 11.8)
 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/
-onnxruntime-gpu
-omegaconf
+onnxruntime-gpu>=1.18.1
 
 # for HunYuanDiT
-sentencepiece==0.2.0
 timm==1.0.7
 
 # this is for onnx: 
