--- a/requirements-uv.txt
+++ b/requirements-uv.txt
@@ -6,6 +6,7 @@ absl-py==2.1.0
     # via
     #   keras
     #   tensorboard
+    #   tensorflow-intel
 accelerate==0.33.0
     # via
     #   -r requirements.txt
@@ -24,6 +25,8 @@ annotated-types==0.7.0
     # via pydantic
 anyio==4.4.0
     # via starlette
+astunparse==1.6.3
+    # via tensorflow-intel
 async-timeout==4.0.3
     # via aiohttp
 attrs==24.2.0
@@ -75,6 +78,7 @@ filelock==3.13.1
 flatbuffers==24.3.25
     # via
     #   onnxruntime-gpu
+    #   tensorflow-intel
 frozenlist==1.4.1
     # via
     #   aiohttp
@@ -86,18 +90,24 @@ fsspec==2024.2.0
     #   torch
 ftfy==6.1.1
     # via -r requirements.txt
+gast==0.6.0
+    # via tensorflow-intel
 gitdb==4.0.11
     # via gitpython
 gitpython==3.1.43
     # via wandb
+google-pasta==0.2.0
+    # via tensorflow-intel
 grpcio==1.66.1
     # via
     #   tensorboard
+    #   tensorflow-intel
 h11==0.14.0
     # via uvicorn
 h5py==3.11.0
     # via
     #   keras
+    #   tensorflow-intel
 huggingface-hub==0.24.5
     # via
     #   -r requirements.txt
@@ -125,6 +135,10 @@ jsonschema==4.23.0
     # via altair
 jsonschema-specifications==2023.12.1
     # via jsonschema
+keras==3.5.0
+    # via tensorflow-intel
+libclang==18.1.1
+    # via tensorflow-intel
 lightning-utilities==0.11.7
     # via
     #   pytorch-lightning
@@ -144,6 +158,7 @@ mdurl==0.1.2
 ml-dtypes==0.4.0
     # via
     #   keras
+    #   tensorflow-intel
 mpmath==1.3.0
     # via sympy
 multidict==6.1.0
@@ -172,6 +187,7 @@ numpy==1.26.3
     #   pytorch-optimizer
     #   scipy
     #   tensorboard
+    #   tensorflow-intel
     #   torchmetrics
     #   torchvision
     #   transformers
@@ -181,6 +197,8 @@ onnxruntime-gpu==1.19.0
     # via -r requirements.txt
 opencv-python==4.8.1.78
     # via -r requirements.txt
+opt-einsum==3.3.0
+    # via tensorflow-intel
 optree==0.12.1
     # via keras
 packaging==22.0
@@ -192,6 +210,7 @@ packaging==22.0
     #   onnxruntime-gpu
     #   pytorch-lightning
     #   tensorboard
+    #   tensorflow-intel
     #   torch-optimi
     #   torchmetrics
     #   transformers
@@ -211,6 +230,7 @@ protobuf==3.20.3
     #   onnx
     #   onnxruntime-gpu
     #   tensorboard
+    #   tensorflow-intel
     #   wandb
 psutil==6.0.0
     # via
@@ -252,6 +272,7 @@ requests==2.28.1
     # via
     #   diffusers
     #   huggingface-hub
+    #   tensorflow-intel
     #   transformers
     #   wandb
 rich==13.7.0
@@ -283,6 +304,7 @@ setuptools==70.0.0
     # via
     #   lightning-utilities
     #   tensorboard
+    #   tensorflow-intel
     #   wandb
 six==1.16.0
     # via
@@ -291,6 +313,7 @@ six==1.16.0
     #   google-pasta
     #   python-dateutil
     #   tensorboard
+    #   tensorflow-intel
 smmap==5.0.1
     # via gitdb
 sniffio==1.3.1
@@ -304,10 +327,17 @@ sympy==1.12
 tensorboard==2.17.1
     # via
     #   -r requirements.txt
+    #   tensorflow-intel
 tensorboard-data-server==0.7.2
     # via tensorboard
 tensorflow==2.17.0
     # via -r requirements.txt
+tensorflow-intel==2.17.0
+    # via tensorflow
+tensorflow-io-gcs-filesystem==0.31.0
+    # via tensorflow-intel
+termcolor==2.4.0
+    # via tensorflow-intel
 timm==1.0.7
     # via -r requirements.txt
 tokenizers==0.19.1
@@ -356,6 +386,7 @@ typing-extensions==4.9.0
     #   pydantic
     #   pydantic-core
     #   pytorch-lightning
+    #   tensorflow-intel
     #   torch
     #   uvicorn
 tzdata==2024.1
@@ -376,6 +407,8 @@ werkzeug==3.0.4
     # via tensorboard
 wheel==0.44.0
     # via astunparse
+wrapt==1.16.0
+    # via tensorflow-intel
 yarl==1.11.1
     # via aiohttp
 zipp==3.20.1
