--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,14 @@ diffusers[torch]==0.25.0
 ftfy==6.1.1
 # albumentations==1.3.0
 opencv-python==4.8.1.78
-einops==0.7.0
+einops==0.8.0
 pytorch-lightning==1.9.0
 bitsandbytes==0.44.0
-prodigyopt==1.0
-lion-pytorch==0.0.6
+prodigyopt
+lion-pytorch
+scipy
+dadaptation
+wandb
 schedulefree==1.2.7
 torch-optimi==0.2.1
 adam-mini==1.0.1
@@ -40,7 +43,7 @@ onnxruntime-gpu>=1.18.1
 timm==1.0.7
 
 # this is for onnx: 
-protobuf==3.20.3
+protobuf
 # open clip for SDXL
 # open-clip-torch==2.20.0
 # For logging
