--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,8 @@ onnx==1.15.0
 onnxruntime-gpu>=1.18.1
 
 # for HunYuanDiT
-timm==1.0.7
+timm==1.0.11
+torch==2.5.1+cu124
 
 # this is for onnx: 
 protobuf
