--- a/requirements-uv.txt
+++ b/requirements-uv.txt
@@ -95,6 +95,8 @@ h5py==3.11.0
     # via
     #   keras
     #   tensorflow-intel
+heavyball==0.3.0
+    # via -r ./requirements.txt
 huggingface-hub==0.24.5
     # via
     #   -r ./requirements.txt
@@ -271,7 +273,7 @@ safetensors==0.4.4
     #   diffusers
     #   timm
     #   transformers
-schedulefree==1.2.7
+schedulefree==1.3
     # via -r ./requirements.txt
 scipy==1.14.1
     # via -r ./requirements.txt
@@ -309,7 +311,7 @@ tensorboard-data-server==0.7.2
     # via tensorboard
 tensorflow==2.17.0
     # via -r ./requirements.txt
-tensorflow-intel==2.17.0
+#tensorflow-intel==2.17.0
     # via tensorflow
 tensorflow-io-gcs-filesystem==0.31.0
     # via tensorflow-intel
@@ -365,7 +367,7 @@ urllib3==1.26.13
     #   sentry-sdk
 voluptuous==0.13.1
     # via -r ./requirements.txt
-wandb==0.17.9
+wandb==0.18.0
     # via -r ./requirements.txt
 wcwidth==0.2.13
     # via ftfy
