--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,10 @@ prodigyopt
 lion-pytorch
 scipy
 dadaptation
-wandb
+heavyball
+wandb==0.18.0
 pillow-avif-plugin
-schedulefree==1.2.7
+schedulefree==1.3.0
 torch-optimi==0.2.1
 adam-mini==1.0.1
 tensorboard
