--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,18 @@ ftfy==6.1.1
 opencv-python==4.8.1.78
 einops==0.8.0
 pytorch-lightning==1.9.0
-bitsandbytes==0.44.0
+bitsandbytes==0.44.1
 prodigyopt
+prodigy-plus-schedule-free
 lion-pytorch
 scipy
 dadaptation
-heavyball>=0.10.2
+heavyball>=0.24.4
 wandb==0.18.0
 pillow-avif-plugin
-schedulefree==1.3.0
+schedulefree>=1.4.0
 torch-optimi==0.2.1
-adam-mini==1.0.1
+adam-mini>=1.1.1
 tensorboard
 safetensors==0.4.4
 # gradio==3.16.2
