--- a/requirements-uv.txt
+++ b/requirements-uv.txt
@@ -320,7 +320,7 @@ tensorboard-data-server==0.7.2
     # via tensorboard
 tensorflow==2.17.0
     # via -r ./requirements.txt
-tensorflow-intel==2.17.0
+#tensorflow-intel==2.17.0
     # via tensorflow
 tensorflow-io-gcs-filesystem==0.31.0
     # via tensorflow-intel
