--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 accelerate==0.33.0
-transformers==4.44.2
+transformers>=4.44.2
 diffusers[torch]==0.25.0
 ftfy==6.1.1
 # albumentations==1.3.0
 opencv-python==4.8.1.78
-einops==0.8.0
+einops==0.8.1
 pytorch-lightning==1.9.0
-bitsandbytes==0.44.1
+bitsandbytes>=0.44.1
 prodigyopt
 prodigy-plus-schedule-free
 lion-pytorch
 scipy
 dadaptation
 heavyball>=0.24.4
-wandb==0.18.0
+wandb>=0.18.0
 pillow-avif-plugin
 schedulefree>=1.4.0
 torch-optimi==0.2.1
@@ -35,7 +35,7 @@ imagesize==1.4.1
 # for WD14 captioning (tensorflow)
 tensorflow
 # for WD14 captioning (onnx)
-onnx==1.15.0
+onnx>=1.15.0
 # onnxruntime-gpu==1.18.1
 # onnxruntime==1.18.1
 # for cuda 12.x(default 11.8)
@@ -44,7 +44,7 @@ onnxruntime-gpu>=1.18.1
 
 # for HunYuanDiT
 timm==1.0.11
-torch==2.5.1+cu124
+torch==2.6.0+cu126
 
 # this is for onnx: 
 protobuf
@@ -56,5 +56,5 @@ rich==13.7.0
 sentencepiece==0.2.0
 # for kohya_ss library
 -e .
-https://github.com/woct0rdho/triton-windows/releases/download/v3.2.0-windows.post9/triton-3.2.0-cp310-cp310-win_amd64.whl
+https://github.com/woct0rdho/triton-windows/releases/download/v3.2.0-windows.post10/triton-3.2.0-cp310-cp310-win_amd64.whl
 https://github.com/kingbri1/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu124torch2.5.1cxx11abiFALSE-cp310-cp310-win_amd64.whl
