--- a/requirements.txt
+++ b/requirements.txt
@@ -58,3 +58,4 @@ sentencepiece==0.2.0
 -e .
 https://github.com/woct0rdho/triton-windows/releases/download/v3.2.0-windows.post10/triton-3.2.0-cp310-cp310-win_amd64.whl
 https://github.com/kingbri1/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu124torch2.5.1cxx11abiFALSE-cp310-cp310-win_amd64.whl
+optree>=0.13.0
