--- a/requirements-uv.txt
+++ b/requirements-uv.txt
@@ -30,7 +30,7 @@ attrs==24.2.0
     #   aiohttp
     #   jsonschema
     #   referencing
-bitsandbytes==0.44.1
+bitsandbytes==0.45.3
     # via -r requirements.txt
 certifi==2022.12.7
     # via
@@ -163,6 +163,7 @@ networkx==3.2.1
     # via torch
 numpy==1.26.3
     # via
+    #   -r requirements.txt
     #   accelerate
     #   altair
     #   bitsandbytes
