--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,6 @@ rich==13.7.0
 sentencepiece==0.2.0
 # for kohya_ss library
 -e .
-https://github.com/woct0rdho/triton-windows/releases/download/v3.2.0-windows.post10/triton-3.2.0-cp310-cp310-win_amd64.whl
+triton-windows>=3.2.0.post15
 https://github.com/sdbds/flash-attention-for-windows/releases/download/2.7.4.post1/flash_attn-2.7.4.post1+cu124torch2.5.1cxx11abiFALSEfullbackward-cp310-cp310-win_amd64.whl
 optree>=0.13.0
