--- a/requirements-uv.txt
+++ b/requirements-uv.txt
@@ -365,7 +365,7 @@ tqdm==4.64.1
     #   transformers
 transformers==4.44.2
     # via -r requirements.txt
-triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.2.0-windows.post10/triton-3.2.0-cp310-cp310-win_amd64.whl
+triton-windows==3.2.0.post15
     # via -r requirements.txt
 typing-extensions==4.12.2
     # via
