--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ altair==4.2.2
 easygui==0.98.3
 toml==0.10.2
 voluptuous==0.13.1
-huggingface-hub==0.24.5
+huggingface_hub[hf_xet]>=0.30.2
 # for Image utils
 imagesize==1.4.1
 numpy<=2.0
@@ -43,8 +43,8 @@ onnxruntime-gpu==1.20.2
 
 # for HunYuanDiT
 timm==1.0.11
-torch
-xformers
+torch==2.7.0
+#xformers
 
 # this is for onnx: 
 protobuf
@@ -56,6 +56,7 @@ rich==13.7.0
 sentencepiece==0.2.0
 # for kohya_ss library
 -e .
-triton-windows>=3.2.0.post17
-https://github.com/sdbds/flash-attention-for-windows/releases/download/311%2Btorch260%2Bcu126/flash_attn-2.7.4.post1+cu126torch2.6.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl
+triton-windows>=3.3.0.post19 ; sys_platform == 'win32'
+https://github.com/sdbds/flash-attention-for-windows/releases/download/torch270%2Bcu128/flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'
+flash-attn; sys_platform == 'linux'
 optree>=0.13.0
