--- a/requirements.txt
+++ b/requirements.txt
@@ -39,12 +39,13 @@ tensorflow
 onnx>=1.17.0
 # onnxruntime-gpu==1.18.1
 # onnxruntime==1.18.1
-onnxruntime-gpu==1.20.2
+onnxruntime-gpu==1.20.2 ; sys_platform == 'win32'
+onnxruntime-gpu>=1.20.2 ; sys_platform == 'linux'
 
 # for HunYuanDiT
 timm==1.0.11
 torch==2.7.0
-#xformers
+xformers
 
 # this is for onnx: 
 protobuf
