--- a/requirements.txt
+++ b/requirements.txt
@@ -59,5 +59,5 @@ sentencepiece==0.2.0
 -e .
 triton-windows>=3.3.0.post19 ; sys_platform == 'win32'
 https://github.com/sdbds/flash-attention-for-windows/releases/download/torch270%2Bcu128/flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'
-flash-attn; sys_platform == 'linux'
+git+https://github.com/Dao-AILab/flash-attention; sys_platform == 'linux'
 optree>=0.13.0
