--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ safetensors==0.4.5
 # easygui==0.98.3
 toml==0.10.2
 voluptuous==0.15.2
-huggingface-hub==0.34.3
+huggingface_hub[hf_xet]>=0.34.3
 # for Image utils
 imagesize==1.4.1
 numpy
